Раздел безопасности частично перенесен в обзор литературы

--- a/inc/0-annotation.tex
+++ b/inc/0-annotation.tex
@@ -12,8 +12,9 @@
 Зачастую небольшая команда, проектирующая облачную инфраструктуру не всегда может полностью учесть все аспекты безопасности, так как нет единого документа, стандартизующего механизмы обеспечения безопасности в облачной среде.
 Особенно остро вопрос безопасности встал в последнее время, в связи с обнаружением большого количества критических уязвимостей в программном обеспечении и протоколах, используемых поставщиками облачных услуг.
 
-Конечная цель проектирования --- подробный анализ стандартов безопасности облачных вычислений, варианты решения данных проблем, а также технические возможности практической эксплуатации уязвимостей на нескольких уровнях работы облачной инфраструктуры.
+Целью проводимых исследований является повышение эффективности процессов обеспечения информационной безопасности облачных сред.
+Для достижения поставленной цели необходимо разработать структуру системы обеспечения информационной безопасности  заданной облачной среды, провести внедрение и экспериментальные исследования.
 
-Выпускная квалификационная работа магистра изложена на \pageref{LastPage} листах, включает 16 таблиц, 11 рисунков, 1 приложение, 36 литературных источников.
+Выпускная квалификационная работа магистра изложена на \pageref{LastPage} листах, включает 16 таблиц, 11 рисунков, 1 приложение, 28 литературных источников.
 
 \clearpage
