--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -1,6 +1,7 @@
 \section{Постановка задачи}
 
-Конечной задачей выпускной квалификационной работы магистра на тему <<Исследование процессов обеспечения безопасности облачных сред>> является подробный анализ стандартов безопасности облачных вычислений, варианты решения данных проблем, а также технические возможности практической эксплуатации уязвимостей на нескольких уровнях работы облачной инфраструктуры.
+Конечной задачей выпускной квалификационной работы магистра на тему <<Исследование процессов обеспечения безопасности облачных сред>> является повышение эффективности процессов обеспечения информационной безопасности облачных сред.
+Для достижения поставленной цели необходимо разработать структуру системы обеспечения информационной безопасности  заданной облачной среды, провести внедрение и экспериментальные исследования.
 
 Исследования должны состоять из следующих частей:
 \begin{itemize}
