Исправления в докладе и слайдах

--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -39,7 +39,7 @@
     \item утечка данных
     \item компрометация учетных записей и обход аутентификации
     \item взлом интерфейсов и API
-    \item уязвимость используемых систем
+    \item уязвимости в используемых системах
     \item кража учетных записей
     \item инсайдеры-злоумышленники
     \item целевые кибератаки
@@ -65,7 +65,7 @@
     \item использование одноразовых паролей и токенов
     \item контроль доступа, шифрование API
     \item периодические пентестинги и аудиты безопасности
-    \item регулярное сканирование на наличие уязвимостией
+    \item регулярное сканирование на наличие уязвимостей
     \item мониторинг и логирование
     \item резервное копирование и репликация
     \item резервирование сетевых каналов и сегментация сети
