Значительно сократил презентацию, мало времени

--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -32,7 +32,7 @@
 
 %%% Работа с картинками
 \usepackage{graphicx}    % Для вставки рисунков
-\graphicspath{{images/}} % Каталоги с картинками
+\graphicspath{{../images/}} % Каталоги с картинками
 \setlength\fboxsep{3pt}  % Отступ рамки \fbox{} от рисунка
 \setlength\fboxrule{1pt} % Толщина линий рамки \fbox{}
 \usepackage{wrapfig}     % Обтекание рисунков текстом
