Смысловые исправления в докладе

--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -52,7 +52,6 @@
 
 \begin{frame}
 \frametitle{\insertsection}
-\framesubtitle{Теоретические и практические исследования}
 
 \begin{itemize}
     \item сбор и структурирование имеющейся информации по безопасности
@@ -156,7 +155,7 @@ Telegram alert sent
     \item сбор данных по наиболее опасным уязвимостям в ПО
     \item практическая эксплуатация уязвимости CVE-2016-5195
     \item разработка системы сбора данных по уязвимостям
-    \item публикация исследований под свободной лицензией CC BY-SA 4.0, исходного кода под GPLv3
+    \item публикация исследований под свободной лицензией {\color{green}CC BY-SA 4.0}, исходного кода под {\color{green}GPLv3}
 \end{itemize}
 \end{frame}
 
