Правки перед сдачей

--- a/inc/0-conclusion.tex
+++ b/inc/0-conclusion.tex
@@ -17,4 +17,7 @@
 Скрипт осуществляет поиск по открытой базе уязвимостей согласно установленным параметрам.
 Программа находится в открытом доступе и распространяется под открытой лицензией.
 
+Практичекая значимость исследования состоит в возможности применения написанной программы в облачной среде провайдеров для анализа уязвимостей и незамедлительного реагирования на них.
+Также разработана защищенная облачная инфраструктура, по примеру которой можно аналогично строить другие, описаны страгегии расширения инфраструктуры.
+
 \clearpage
