--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -1,9 +1,9 @@
 \section{Постановка задачи}
 
-Конечной задачей выпускной квалификационной работы магистра на тему <<Исследование процессов обеспечения безопасности облачных сред>> является повышение эффективности процессов обеспечения информационной безопасности облачных сред.
-Для достижения поставленной цели необходимо разработать структуру системы обеспечения информационной безопасности  заданной облачной среды, провести внедрение и экспериментальные исследования.
+Конечной целью выпускной квалификационной работы магистра на тему <<Исследование процессов обеспечения безопасности облачных сред>> является повышение эффективности процессов обеспечения информационной безопасности облачных сред.
+Для достижения поставленной цели необходимо разработать структуру системы обеспечения информационной безопасности заданной облачной среды, провести внедрение и экспериментальные исследования.
 
-Исследования должны состоять из следующих частей:
+Для достижения целей исследования должны быть решены следующие задачи:
 \begin{itemize}
   \item обзор составных частей облачной инфраструктуры;
   \item анализ технологий используемых облачными провайдерами, необходимых для построения облачной инфраструктуры;
@@ -12,6 +12,10 @@
   \item решение проблем безопасности облаков;
   \item практическое применение уязвимостей в облачной среде, с использованием программ, распространяющихся под свободными лицензиями, например \hyperlink{gnu}{GNU} \hyperlink{gpl}{GPL}.
 \end{itemize}
+
+Входными данными является облачная инфраструктура состоящая из физических и виртуальных серверов на базе операционной системы Linux.
+
+Выходными данными является программное обеспечение для получения данных о уязвимостях в программном обеспечении, используемом в инфраструктуре, а также собранная и проанализированная информация о проблемах безопасности в облачной среде.
 
 Для применения практических навыков исследования уязвимостей необходима аппаратная платформа со следующими характеристиками:
 \begin{itemize}
