--- a/inc/5-description.tex
+++ b/inc/5-description.tex
@@ -2,28 +2,28 @@
 
 В разделе описания облачной инфраструктуры представлена структурная схема облачной инфраструктуры, а также структурная схема системы безопасности.
 
-\subsection{Стурктурная схема облачной инфраструктуры}
+\subsection{Структурная схема облачной инфраструктуры}
 
-Структурная схема облачной инфрастурктуры представлена на рис. \ref{infrast-scheme}.
+Структурная схема облачной инфраструктуры представлена на рис. \ref{infrast-scheme}.
 
-\addimghere{infrast-scheme}{1}{Стурктурная схема облачной инфраструктуры}{infrast-scheme}
+\addimghere{infrast-scheme}{1}{Структурная схема облачной инфраструктуры}{infrast-scheme}
 
 В ЦОД 1 располагается основная часть инфраструктуры: сервера виртуального хостинга, виртуализации OpenVZ и KVM, сервер резервного копирования и выделенные сервера клиентов.
 
 В ЦОД 2 на двух арендованных виртуальных машинах находится один из подчиненных DNS-серверов, а также сервер мониторинга.
 На физических серверах располагаются важные элементы инфраструктуры: DNS-сервера, система биллинга и система управления IP-адресами.
 
-\subsection{Стурктурная схема системы безопасности}
+\subsection{Структурная схема системы безопасности}
 
 Структурная схема системы безопасности представлена на рис. \ref{cwpp}.
 
-\addimghere{cwpp}{1}{Стурктурная схема облачной инфраструктуры}{cwpp}
+\addimghere{cwpp}{1}{Структурная схема системы безопасности облачной инфраструктуры}{cwpp}
 
 Среди них можно выделить несколько наиболее важных.
-Наиболее важными компонентами являются:
+Наиболее важными компонентами схемы являются:
 \begin{itemize}
   \item контроль физического доступа;
-  \item регулярное обновлени программного обеспечения;
+  \item регулярное обновление программного обеспечения;
   \item централизованный мониторинг;
   \item проведение тестов на поиск уязвимостей.
 \end{itemize}
