--- a/inc/7-results.tex
+++ b/inc/7-results.tex
@@ -31,7 +31,7 @@
 Синтезированы глобальные приоритеты альтернатив.
 В результате анализа наибольшее предпочтение решено было отдать альтернативе В (VMware vSphere), однако для более точного определения гипервизора, необходимо сравнивать значительно большее число критериев.
 
-В разделе описания облачной инфрастурктуры представлены и описаны структурные схемы облачной инфраструктуры, а также структурная схема системы безопасности.
+В разделе описания облачной инфраструктуры представлены и описаны структурные схемы облачной инфраструктуры, а также структурная схема системы безопасности.
 
 В ходе экспериментальных исследований были проанализированы уязвимости 2016~г. в программном обеспечении, используемом в облачных вычислениях.
 Исследованы основные ошибки в программном коде продуктов и способы их исправления.
