Исправление замечаний, нумерация страниц снизу

--- a/inc/0-conclusion.tex
+++ b/inc/0-conclusion.tex
@@ -18,6 +18,6 @@
 Программа находится в открытом доступе и распространяется под открытой лицензией.
 
 Практическая значимость исследования состоит в возможности применения написанной программы в облачной среде провайдеров для анализа уязвимостей и незамедлительного реагирования на них.
-Также разработана защищенная облачная инфраструктура, по примеру которой можно аналогично строить другие, описаны стратегии расширения инфраструктуры.
+Также разработана защищенная облачная инфраструктура, описаны стратегии расширения инфраструктуры.
 
 \clearpage
