--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -9,13 +9,12 @@
   \item анализ технологий используемых облачными провайдерами, необходимых для построения облачной инфраструктуры;
   \item специфика применений облачных вычислений в России;
   \item исследование проблемы безопасности облачных вычислений;
-  \item решение проблем безопасности облаков;
-  \item практическое применение уязвимостей в облачной среде, с использованием программ, распространяющихся под свободными лицензиями, например \hyperlink{gnu}{GNU} \hyperlink{gpl}{GPL}.
+  \item исследованеи уязвимостей в облачной среде, с использованием программ, распространяющихся под свободными лицензиями, например \hyperlink{gnu}{GNU} \hyperlink{gpl}{GPL}.
 \end{itemize}
 
-Входными данными является облачная инфраструктура состоящая из физических и виртуальных серверов на базе операционной системы Linux.
+Входными данными для исследования являются облачная инфраструктура состоящая из физических и виртуальных серверов на базе операционной системы Linux.
 
-Выходными данными является программное обеспечение для получения данных о уязвимостях в программном обеспечении, используемом в инфраструктуре, а также собранная и проанализированная информация о проблемах безопасности в облачной среде.
+Выходными данными являются структура системы информационной безопасности и программное обеспечение для получения данных о уязвимостях в программном обеспечении, используемом в инфраструктуре, а также собранная и проанализированная информация о проблемах безопасности в облачной среде.
 
 Для применения практических навыков исследования уязвимостей необходима аппаратная платформа со следующими характеристиками:
 \begin{itemize}
