--- a/inc/5-description.tex
+++ b/inc/5-description.tex
@@ -13,13 +13,13 @@
 В ЦОД 2 на двух арендованных виртуальных машинах находится один из подчиненных DNS-серверов, а также сервер мониторинга.
 На физических серверах располагаются важные элементы инфраструктуры: DNS-сервера, система биллинга и система управления IP-адресами.
 
-\subsection{Структурная схема системы безопасности}
+\subsection{Архитектура системы безопасности}
 
-Структурная схема системы безопасности представлена на рис. \ref{cwpp}.
+Архитектура системы безопасности представлена на рис. \ref{cwpp}.
 
-\addimghere{cwpp}{1}{Структурная схема системы безопасности облачной инфраструктуры}{cwpp}
+\addimghere{cwpp}{1}{Архитектура системы безопасности}{cwpp}
 
-Среди них можно выделить несколько наиболее важных.
+Среди компонент и процессов систем защиты можно выделить несколько наиболее важных.
 Наиболее важными компонентами схемы являются:
 \begin{itemize}
   \item контроль физического доступа;
