--- a/preamble.tex
+++ b/preamble.tex
@@ -115,7 +115,7 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
-\fancyhead[C]{\textrm{\thepage}}
+\cfoot{\textrm{\thepage}}
 \fancyheadoffset{0mm}
 \fancyfootoffset{0mm}
 \setlength{\headheight}{17pt}
@@ -123,7 +123,7 @@
 \renewcommand{\footrulewidth}{0pt}
 \fancypagestyle{plain}{
     \fancyhf{}
-    \fancyhead[C]{\textrm{\thepage}}
+    \cfoot{\textrm{\thepage}}
 }
 
 % Формат подрисуночных надписей
@@ -231,4 +231,4 @@
 \makeatother
 
 \usepackage{lastpage} % Подсчет количества страниц
-\setcounter{page}{4}  % Начало нумерации страниц
+%\setcounter{page}{4}  % Начало нумерации страниц
