Пока не включаем бланк задания

--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 \begin{document}
 
 %\includepdf{pz} % Пояснительная записка
-\includepdf[pages={1,2}]{extra/task} % Задание на диплом печатается на одном листе с двух сторон
+%\includepdf[pages={1,2}]{extra/task} % Задание на диплом печатается на одном листе с двух сторон
 %помимо ПЗ и задания, в диплом также вкладывается отзыв руководителя и рецензия
 
 \input{inc/0-annotation} % Аннотация
