Исправлены блаки, нумерация страниц

--- a/main.tex
+++ b/main.tex
@@ -9,10 +9,13 @@
 %%% Начало документа
 \begin{document}
 
+% 1 страница
 %\includepdf{pz} % Пояснительная записка
-%\includepdf[pages={1,2}]{extra/task} % Задание на диплом печатается на одном листе с двух сторон
-%помимо ПЗ и задания, в диплом также вкладывается отзыв руководителя и рецензия
+% 2 страница (не нумеруется, но учитывается)
+%\includepdf[pages={1,2}]{extra/task} % Задание на ВКР печатается на одном листе с двух сторон
+%помимо ПЗ и задания, в ВКР также вкладывается отзыв руководителя, рецензия и отчет по антиплагиату
 
+% 3 страница
 \input{inc/0-annotation} % Аннотация
 
 \tableofcontents % Содержание 
