--- a/preamble.tex
+++ b/preamble.tex
@@ -231,4 +231,4 @@
 \makeatother
 
 \usepackage{lastpage} % Подсчет количества страниц
-%\setcounter{page}{4}  % Начало нумерации страниц
+\setcounter{page}{3}  % Начало нумерации страниц
