--- a/main.tex
+++ b/main.tex
@@ -10,10 +10,15 @@
 \begin{document}
 
 % 1 страница
-%\includepdf{pz} % Пояснительная записка
+% \includepdf{pz} % Пояснительная записка
+
 % 2 страница (не нумеруется, но учитывается)
-%\includepdf[pages={1,2}]{extra/task} % Задание на ВКР печатается на одном листе с двух сторон
-%помимо ПЗ и задания, в ВКР также вкладывается отзыв руководителя, рецензия и отчет по антиплагиату
+% \includepdf[pages={1,2}]{extra/task} % Задание на ВКР печатается на одном листе с двух сторон
+
+% Помимо ПЗ и задания, в ВКР также вкладываются:
+% * отзыв руководителя (otzyv.pdf)
+% * рецензия (review.pdf)
+% * отчет по антиплагиату (antiplagiat.pdf)
 
 % 3 страница
 \input{inc/0-annotation} % Аннотация
