Первые исправления по презентации

--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -9,7 +9,7 @@
   \item анализ технологий используемых облачными провайдерами, необходимых для построения облачной инфраструктуры;
   \item специфика применений облачных вычислений в России;
   \item исследование проблемы безопасности облачных вычислений;
-  \item исследованеи уязвимостей в облачной среде, с использованием программ, распространяющихся под свободными лицензиями, например \hyperlink{gnu}{GNU} \hyperlink{gpl}{GPL}.
+  \item исследование уязвимостей в облачной среде, с использованием программ, распространяющихся под свободными лицензиями, например \hyperlink{gnu}{GNU} \hyperlink{gpl}{GPL}.
 \end{itemize}
 
 Входными данными для исследования являются облачная инфраструктура состоящая из физических и виртуальных серверов на базе операционной системы Linux.
