--- a/inc/5-description.tex
+++ b/inc/5-description.tex
@@ -1,6 +1,6 @@
 \section{Описание системы информационной безопасности облачной среды}
 
-В разделе описания облачной инфраструктуры представлена структурная схема облачной инфраструктуры, а также структурная схема системы безопасности.
+В разделе описания облачной инфраструктуры представлена структурная схема облачной инфраструктуры, а также архитектура системы безопасности.
 
 \subsection{Структурная схема облачной инфраструктуры}
 
@@ -15,7 +15,7 @@
 
 \subsection{Архитектура системы безопасности}
 
-Архитектура системы безопасности представлена на рис. \ref{cwpp}.
+Архитектура системы информационной безопасности представлена на рис. \ref{cwpp}.
 
 \addimghere{cwpp}{1}{Архитектура системы безопасности}{cwpp}
 
