--- a/inc/6-experiment.tex
+++ b/inc/6-experiment.tex
@@ -236,7 +236,7 @@ diff --git a/scripts/local-top/cryptroot b/scripts/local-top/cryptroot
 \end{lstlisting}
 
 Сотрудники компании Google выявили уязвимость CVE-2016-6309 в OpenSSL, позволяющая злоумышленникам выполнить произвольный код при обработке отправленных ими пакетов.
-При получении сообщения размером больше 16~Кб, при перераспределении памяти остается висячий указатель на старое положение буфера и запись поступившего сообщения производится в уже ранее освобожденную область памяти \cite{openssl}.
+При получении сообщения размером больше 16~Кб, при перераспределении памяти остается висячий указатель на старое положение буфера и запись поступившего сообщения производится в уже ранее освобожденную область памяти.
 
 В патче опубликованном в сентябре 2016~г. исправлена проблема с висячим указателем:
 \begin{lstlisting}
