--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -4,97 +4,105 @@
 
 %-------------------------------------------------------------------------------
 
-\section{Угрозы безопасности}
+\section{Цели и задачи исследования}
 
 \begin{frame}
 \frametitle{\insertsection}
-\framesubtitle{По данным CSA за 2016~г.}
+
+\textbf{Цель:} повышение эффективности процессов обеспечения информационной безопасности облачных сред
+
+\vspace{\baselineskip}
+
+\textbf{Задачи:}
+\begin{itemize}
+    \item обзор составных частей облачной инфраструктуры
+    \item анализ технологий используемых облачными провайдерами
+    \item исследование специфики применений облачных вычислений в России
+    \item исследование проблемы безопасности облачных вычислений
+    \item исследование уязвимостей в облачной среде
+\end{itemize}
+\end{frame}
+
+%-------------------------------------------------------------------------------
+
+\section{Проблемы безопасности в облачной среде}
+
+\begin{frame}
+\frametitle{\insertsection}
 
 \begin{itemize}
     \item утечка данных
     \item компрометация учетных записей и обход аутентификации
     \item взлом интерфейсов и API
-    \item уязвимости в используемых системах
+    \item уязвимость используемых систем
     \item кража учетных записей
     \item инсайдеры-злоумышленники
     \item целевые кибератаки
     \item перманентная потеря данных
     \item недостаточная осведомленность
     \item злоупотребление облачными сервисами
-    \item DDoS-атаки
-    \item совместные технологии, общие риски
+    \item ...
 \end{itemize}
 \end{frame}
 
 %-------------------------------------------------------------------------------
 
-\section{Борьба с проблемами в безопасности}
+\section{Результаты системного и вариантного анализа}
 
 \begin{frame}
 \frametitle{\insertsection}
 
+Системный анализ:
 \begin{itemize}
-    \item многофакторная аутентификация (2FA/MFA)
-    \item стойкое шифрование (SSL/TLS)
-    \item использование одноразовых паролей и токенов
-    \item контроль доступа, шифрование API
-    \item периодические пентестинги и аудиты безопасности
-    \item регулярное сканирование на наличие уязвимостей
-    \item мониторинг и логирование
-    \item резервное копирование и репликация
-    \item резервирование сетевых каналов и сегментация сети
+    \item составление функций проектируемой облачной среды
+    \item разбиение сложной системы на подсистемы
+    \item детализация и декомпозиция подсистем
+    \item учет изменяемости системы и случайностей в системе
 \end{itemize}
-\end{frame}
 
-%-------------------------------------------------------------------------------
+\vspace{\baselineskip}
 
-\section{Решения в рамках ВКР магистра}
-
-\begin{frame}
-\frametitle{\insertsection}
-
+Вариантный анализ:
 \begin{itemize}
-    \item сбор и структурирование имеющейся информации по безопасности
-    \item системный анализ полученной информации
-    \item выбор альтернатив согласно набору критериев (МАИ)
-    \item практическое применение полученной информации
-    \item анализ наиболее опасных уязвимостей 2016~г.
-    \item эксплуатация уязвимостей в облачной среде
-    \item создание методов быстрого реагирования на уязвимости
+    \item альтернативы: KVM, Hyper-V, VMware vSphere
+    \item критерии: цена, масштабируемость, отказоустойчивость, интерфейсы управления
+    \item предпочтение отдано альтернативе В (VMware vSphere)
 \end{itemize}
 \end{frame}
 
 %-------------------------------------------------------------------------------
 
-\section{Критические уязвимости 2016~г.}
+\section{Структурная схема облачной среды}
 
 \begin{frame}
 \frametitle{\insertsection}
-\framesubtitle{По данным www.cvedetails.com}
 
-\begin{table}
-    \begin{tabular}{|l|l|p{4cm}|l|}
-        \hline \textbf{CVE ID} & \textbf{CVSS} & \textbf{Тип уязвимости} & \textbf{ПО} \\
-        \hline CVE-2016-5195 & 7.2 & Получение привилегий & Linux Kernel \\
-        \hline CVE-2016-6258 & 7.2 & Получение привилегий & Xen \\
-        \hline CVE-2016-5696 & 5.8 & Получение данных & Linux Kernel \\
-        \hline CVE-2016-3710 & 7.2 & Запуск кода & QEMU \\
-        \hline CVE-2016-8655 & 7.2 & Получение привилегий, DoS & Linux Kernel \\
-        \hline CVE-2016-4997 & 7.2 & Получение привилегий, DoS, доступ к памяти & Linux Kernel \\
-        \hline CVE-2016-4484 & 7.2 & Получение привилегий & CryptSetup \\
-        \hline CVE-2016-6309 & 10.0 & DoS, запуск кода & OpenSSL\\
-        \hline
-    \end{tabular}
-\end{table}
+\begin{figure}
+    \center
+    \includegraphics[width=\linewidth]{infrast-scheme}
+\end{figure}
 \end{frame}
 
 %-------------------------------------------------------------------------------
 
-\section{Эксплуатация CVE-2016-5195}
+\section{Архитектура информационной безопасности}
 
 \begin{frame}
 \frametitle{\insertsection}
-\framesubtitle{<<Dirty COW>> (Copy-on-write)}
+
+\begin{figure}
+    \center
+    \includegraphics[width=\linewidth]{cwpp}
+\end{figure}
+\end{frame}
+
+%-------------------------------------------------------------------------------
+
+\section{Экспериментальные исследования}
+
+\begin{frame}
+\frametitle{\insertsection}
+\framesubtitle{CVE-2016-5195}
 
 {\small \texttt{\$ id \\
 {\color{green} uid=1000(dcow)} gid=1000(dcow) groups=1000(dcow)
@@ -119,8 +127,6 @@ Password: dirtyCowFun \\
 \end{frame}
 
 %-------------------------------------------------------------------------------
-
-\section{Мониторгинг уязвимостей}
 
 \begin{frame}
 \frametitle{\insertsection}
@@ -155,7 +161,6 @@ Telegram alert sent
     \item сбор данных по наиболее опасным уязвимостям в ПО
     \item практическая эксплуатация уязвимости CVE-2016-5195
     \item разработка системы сбора данных по уязвимостям
-    \item публикация исследований под свободной лицензией {\color{green}CC BY-SA 4.0}, исходного кода под {\color{green}GPLv3}
 \end{itemize}
 \end{frame}
 
