Добавлены исправленные бланки задания и ПЗ

--- a/main.tex
+++ b/main.tex
@@ -16,8 +16,8 @@
 % \includepdf[pages={1,2}]{extra/task} % Задание на ВКР печатается на одном листе с двух сторон
 
 % Помимо ПЗ и задания, в ВКР также вкладываются:
-% * отзыв руководителя (otzyv.pdf)
-% * рецензия (review.pdf)
+% * отзыв руководителя (otzyv.pdf), на 1 странице с двух сторон
+% * рецензия (review.pdf), на 1 странице с двух сторон
 % * отчет по антиплагиату (antiplagiat.pdf)
 
 % 3 страница
