Добавлен слайд по выводам

--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -165,3 +165,22 @@ Telegram alert sent
 \end{frame}
 
 %-------------------------------------------------------------------------------
+
+\section{Выводы}
+
+\begin{frame}
+\frametitle{\insertsection}
+
+\begin{itemize}
+    \item не существует единого стандарта безопасности для провайдеров
+    \item стоит уделить достаточно времени для анализа и выбора ПО
+    \item российский облачный рынок стремительно развивается
+    \item рост числа уязвимостей в ПО
+\end{itemize}
+\end{frame}
+
+%-------------------------------------------------------------------------------
+
+\frame[plain]{\titlepage}
+
+%-------------------------------------------------------------------------------
