--- a/presentation/main.tex
+++ b/presentation/main.tex
@@ -53,9 +53,15 @@
 \usepackage{tikz,calc,ifthen,color}
 
 \title{Исследование процессов обеспечения безопасности облачных сред}
-\author[Умеров Амет]{Умеров Амет}
-\institute{}
-\date{}
+\subtitle{Выпускная квалификационная работа магистра}
+\author{Магистрант:\\
+Умеров А.Р. \\
+\vspace{0.7\baselineskip}
+Научный руководитель:\\
+к.т.н., доцент, Мащенко Е.Н.}
+\institute{Севастопольский государственный университет \\
+Кафедра информационных технологий и компьютерных систем}
+\date{2017 г.}
 
 \begin{document}
 \input{slides.tex}
