--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -25,6 +25,139 @@
 
 %-------------------------------------------------------------------------------
 
+\section{Входные и выходные данные}
+
+\begin{frame}
+\frametitle{\insertsection}
+
+\textbf{Входные данные:}
+\begin{itemize}
+    \item структура и характеристики облачной среды
+    \item перечень угроз и уязвимостей
+    \item перечень характеристик качества
+    \item облачная инфраструктура
+\end{itemize}
+
+\vspace{\baselineskip}
+
+\textbf{Выходные данные:}
+\begin{itemize}
+    \item структура системы информационной безопасности
+    \item ПО для получения данных о уязвимостях
+    \item список ПО используемого в инфраструктуре
+    \item информация о проблемах безопасности в облачной среде
+\end{itemize}
+\end{frame}
+
+%-------------------------------------------------------------------------------
+
+\section{Составные части и технологии облачной инфраструктуры}
+
+\begin{frame}
+\frametitle{\insertsection}
+
+\textbf{Составные части:}
+\begin{itemize}
+    \item клиентские устройства
+    \item сетевая среда доступа
+    \item специализированное ПО
+    \item центр обработки данных
+\end{itemize}
+
+\vspace{\baselineskip}
+
+\textbf{Технологии:}
+\begin{itemize}
+    \item виртуализация
+    \item оркестраторы
+    \item списки (каталоги) услуг
+    \item порталы самообслуживания
+    \item системы тарификации и выставления счетов (биллинг)
+\end{itemize}
+\end{frame}
+
+%-------------------------------------------------------------------------------
+
+\section{Проблемы стандартизации облачных вычислений}
+
+\begin{frame}
+\frametitle{\insertsection}
+
+\begin{itemize}
+    \item не существует единого стандарта безопасности
+    \item множество корпоративных стандартов
+    \item репутация компании играет важную роль
+\end{itemize}
+
+\begin{figure}
+    \center
+    \includegraphics[width=\linewidth]{logos}
+\end{figure}
+\end{frame}
+
+%-------------------------------------------------------------------------------
+
+\section{Рекомендации руководства по безопасности}
+
+\begin{frame}
+\frametitle{\insertsection}
+\framesubtitle{Security Guidance for Critical Areas of Focus in Cloud Computing}
+
+\begin{itemize}
+    \item архитектурные решения сред облачных вычислений
+    \item государственное и корпоративное управление рисками
+    \item легальное и электронное открытие
+    \item соответствие техническим условиям и отчетность
+    \item управление жизненным циклом информации
+    \item портативность и совместимость
+    \item безопасность, восстановление
+    \item работа центра обработки данных
+    \item реакция на риски, уведомление и обучение
+    \item прикладная безопасность
+    \item криптография и управление ключами
+    \item идентификация и управление доступом
+    \item виртуализация
+\end{itemize}
+\end{frame}
+
+%-------------------------------------------------------------------------------
+
+\section{Специфика российского рынка}
+
+\begin{frame}
+\frametitle{\insertsection}
+\begin{itemize}
+    \item наблюдается большой рост
+    \item отсутствует явный монополист
+    \item разнообразный рынок
+    \item качество услуг растет
+    \item влияние ФЗ №242-ФЗ <<О внесении изменений в отдельные законодательные акты Российской Федерации в части уточнения порядка обработки персональных данных в информационно-телекоммуникационных сетях>>
+\end{itemize}
+\end{frame}
+
+%-------------------------------------------------------------------------------
+
+\section{Крупнейшие поставщики услуг ЦОД 2016}
+
+\begin{frame}
+\frametitle{\insertsection}
+\begin{table}[H]
+  \begin{tabular}{|p{0.3cm}|p{2cm}|p{2cm}|p{2.3cm}|p{2.6cm}|}
+  \hline \# & Название компании & Количество доступных стойко-мест & Количество размещенных стойко-мест & Загруженность мощностей (\%) \\
+  \hline 1 & Ростелеком & 3 900 & 3 432 & 88 \\
+  \hline 2 & DataLine & 3 703 & 2 988 & 81 \\
+  \hline 3 & DataPro & 3 000 & н/д & н/д \\
+  \hline 4 & Linxtelecom & 2 040 & н/д & н/д \\
+  \hline 5 & Selectel & 1 500 & 1 200 & 80 \\
+  \hline 6 & Stack Group & 1 400 & 854 & 61 \\
+  \hline 7 & Ай-Теко & 1 200 & 960 & 80 \\
+  \hline
+  \end{tabular}
+\end{table}
+\end{frame}
+
+%-------------------------------------------------------------------------------
+
 \section{Проблемы безопасности в облачной среде}
 
 \begin{frame}
@@ -47,27 +180,64 @@
 
 %-------------------------------------------------------------------------------
 
-\section{Результаты системного и вариантного анализа}
+\section{Результаты системного анализа}
 
 \begin{frame}
 \frametitle{\insertsection}
 
-Системный анализ:
+\textbf{Функции:}
 \begin{itemize}
-    \item составление функций проектируемой облачной среды
-    \item разбиение сложной системы на подсистемы
-    \item детализация и декомпозиция подсистем
-    \item учет изменяемости системы и случайностей в системе
+    \item авторизация и аутентификация пользователей
+    \item сетевая защита
+    \item идентификация и обработка инцидентов
+    \item предоставление доступа к услугам
+    \item мониторинг
 \end{itemize}
 
 \vspace{\baselineskip}
 
-Вариантный анализ:
+\textbf{Подсистемы:}
+\begin{itemize}
+    \item подсистема аутентификации
+    \item подсистема авторизации
+    \item подсистема сетевой защиты
+    \item подсистема проверки целостности данных
+\end{itemize}
+\end{frame}
+
+%-------------------------------------------------------------------------------
+
+\section{Принцип иерархий}
+
+\begin{frame}
+\frametitle{\insertsection}
+
+\begin{figure}
+    \center
+    \includegraphics[width=\linewidth]{hierarchy}
+\end{figure}
+\end{frame}
+
+%-------------------------------------------------------------------------------
+
+\section{Результаты вариантного анализа}
+
+\begin{frame}
+\frametitle{\insertsection}
+
+\textbf{Цель:} выбор гипервизора
+
+Метод анализа иерархий:
 \begin{itemize}
     \item альтернативы: KVM, Hyper-V, VMware vSphere
     \item критерии: цена, масштабируемость, отказоустойчивость, интерфейсы управления
     \item предпочтение отдано альтернативе В (VMware vSphere)
 \end{itemize}
+
+\begin{figure}
+    \center
+    \includegraphics[width=\linewidth]{logos-hypervisor}
+\end{figure}
 \end{frame}
 
 %-------------------------------------------------------------------------------
@@ -102,46 +272,50 @@
 
 \begin{frame}
 \frametitle{\insertsection}
-\framesubtitle{CVE-2016-5195}
+\framesubtitle{Наиболее опасные критические уязвимости 2016 г.}
 
-{\small \texttt{\$ id \\
-{\color{green} uid=1000(dcow)} gid=1000(dcow) groups=1000(dcow)
-}}
+\begin{table}[H]
+  \begin{tabular}{|l|p{0.8cm}|p{4cm}|l|}
+  \hline CVE ID & CVSS & Тип уязвимости & ПО \\
+  \hline CVE-2016-5195 & 7.2 & Получение привилегий & Linux Kernel \\
+  \hline CVE-2016-6258 & 7.2 & Получение привилегий & Xen \\
+  \hline CVE-2016-5696 & 5.8 & Получение данных & Linux Kernel \\
+  \hline CVE-2016-3710 & 7.2 & Запуск кода & QEMU \\
+  \hline CVE-2016-8655 & 7.2 & Получение привилегий, DoS & Linux Kernel \\
+  \hline CVE-2016-4997 & 7.2 & Получение привилегий, доступ к памяти, DoS & Linux Kernel \\
+  \hline CVE-2016-4484 & 7.2 & Получение привилегий & CryptSetup \\
+  \hline CVE-2016-6309 & 10.0 & DoS, запуск кода & OpenSSL\\
+  \hline
+  \end{tabular}
+\end{table}
+\end{frame}
+%-------------------------------------------------------------------------------
 
-\vspace{\baselineskip}
+\section{Методы обнаружения и блокирования уязвимостей}
 
-{\small \texttt{\$ g++ dcow.cpp -std=c++11 -pthread -lutil -o dcow \\
-\$ ./dcow \\
-Running ... \\
-Received su prompt (Password: ) \\
-Root password is: dirtyCowFun \\
-Enjoy! :-)}}
+\begin{frame}
+\frametitle{\insertsection}
 
-\vspace{\baselineskip}
-
-{\small \texttt{\$ su root \\
-Password: dirtyCowFun \\
-\# id \\
-{\color{red} uid=0(root)} gid=0(root) groups=0(root)
-}}
+\begin{itemize}
+    \item использование системы мониторинга
+    \item \textbf{управление привилегиями пользователей}
+    \item своевременное обновление ПО
+    \item управление конфигурациями
+    \item экранирование уязвимостей
+\end{itemize}
 \end{frame}
 
 %-------------------------------------------------------------------------------
+
+\section{Экспериментальные исследования}
 
 \begin{frame}
 \frametitle{\insertsection}
 \framesubtitle{https://github.com/Amet13/vulncontrol}
 
-{\scriptsize \texttt{\$ ./vulncontrol.py −d 2017−02−18 −m 5 -t \$TOKEN \$ID \\
-CVE−2017−6074 9.3 http://www.cvedetails.com/cve/CVE−2017−6074/ \\
-CVE−2017−6001 7.6 http://www.cvedetails.com/cve/CVE−2017−6001/ \\
-CVE−2017−5986 7.1 http://www.cvedetails.com/cve/CVE−2017−5986/ \\
-Telegram alert sent
-}}
-
 \begin{figure}
     \center
-    \includegraphics[width=0.65\linewidth]{tscreen}
+    \includegraphics[width=0.9\linewidth]{tscreen}
 \end{figure}
 \end{frame}
 
@@ -172,15 +346,14 @@ Telegram alert sent
 \frametitle{\insertsection}
 
 \begin{itemize}
-    \item не существует единого стандарта безопасности для провайдеров
-    \item стоит уделить достаточно времени для анализа и выбора ПО
-    \item российский облачный рынок стремительно развивается
-    \item рост числа уязвимостей в ПО
+    \item проанализированы существующие проблемы и стандарты безопасности облачных вычислений
+    \item предложены способы решения данных проблем
+    \item рассмотрена специфика предоставления облачных услуг зарубежных и отечественных поставщиков
+    \item проанализированы опасные уязвимости за 2016 г.
+    \item описаны входные и выходные данные, функций системы безопасности, произведена декомпозиция системы и описана связь между ее элементами
+    \item произведен сравнительный анализ гипервизоров
+    \item эксплуатирована уязвимость CVE-2016-5195
+    \item для мониторинга уязвимостей в программном обеспечении облачной среды был разработан скрипт
 \end{itemize}
 \end{frame}
-
-%-------------------------------------------------------------------------------
-
-\frame[plain]{\titlepage}
-
 %-------------------------------------------------------------------------------
